Fix modal scrollbars and overflow issues

--- a/src/common/Modal/components/ModalContent/css/index.css
+++ b/src/common/Modal/components/ModalContent/css/index.css
@@ -4,4 +4,6 @@
   flex-direction: column;
   position: relative;
   border-radius: 0 0 15px 15px;
+  flex: 1;
+  overflow: auto;
 }
